--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ body {
 
 .message.user div {
   background-color: none;
-  color: #000098;
+  color: #808080;
   width: 100%;
   border-radius: 8px;
   padding: 0px 10px;
@@ -55,13 +55,13 @@ body {
 }
 
 .message.webhook div {
-  background: rgba(0, 152, 255, 0.1);
+  background: rgba(0, 152, 255, 0.15);
   width: 100%;
-  border: 1px solid rgba(0, 152, 255, 0.1);
-  border-radius: 8px;
-  padding: 0px 10px;
-  color: #333;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  border: 1px solid rgba(0, 0, 0, 0.15);
+  border-radius: 5px;
+  padding: 0px 15px;
+  color: #636363;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.25);
 }
 
 .input-container {
@@ -72,24 +72,25 @@ input[type="text"] {
   flex-grow: 1;
   padding: 10px;
   font-size: 16px;
-  border-radius: 8px;
+  border-radius: 5px;
   border: 1px solid #d3d3d3;
 }
 
 .send-icon {
-  margin-left: 10px;
-  padding: 10px;
-  font-size: 16px;
-  border: none;
-  background-color: #0098FF;
-  color: white;
-  border-radius: 8px;
+  margin-left: 5px;
+  padding: 5px 10px;
+  font-size: 20px;
+  border: 1px solid #0098ff;
+  background-color: #fff;
+  color: #0098ff;
+  border-radius: 5px;
   cursor: pointer;
   transition: background 0.3s ease;
 }
 
 .send-icon:hover {
-  background-color: #0070cc;
+  background-color: #0098ff;
+  color: #fff;
 }
 
 /* Estilo para listas em mensagens */
