--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ body {
 
 /* Ícone do bot */
 .message.webhook::before {
-  content: "🤖";
+  content: url("apto_favicon.png");
   margin-right: 6px;
   font-size: 18px;
 }
